# advent-of-code-rust

./: .gitignore  Cargo.toml  bench.sh  dhat.sh  flamegraph.sh  justfile
common/: Cargo.toml
common/src/: lib.rs
day-02/: Cargo.toml
day-02/benchmarks/: benchmarks.rs
day-02/src/: input1
day-03/src/: puzzle.rs
day-04/: Cargo.toml
day-04/src/: puzzle.rs
day-05/src/: puzzle.rs
day-06/: Cargo.toml
day-06/benchmarks/: benchmarks.rs
day-06/src/: puzzle.rs
day-07/: Cargo.toml
day-07/src/: puzzle.rs
day-08/: Cargo.toml
day-08/src/: puzzle.rs
day-09/: Cargo.toml
day-09/src/: puzzle.rs
template/: Cargo.toml
template/benches/: benchmarks.rs
template/src/: puzzle.rs
y2019/y2019d01/: Cargo.toml
y2019/y2019d01/benchmarks/: benchmarks.rs
y2019/y2019d01/src/: puzzle.rs
y2019/y2019d02/: Cargo.toml
y2019/y2019d02/benchmarks/: benchmarks.rs
y2019/y2019d02/src/: puzzle.rs
y2019/y2019d03/: Cargo.toml
y2019/y2019d03/benchmarks/: benchmarks.rs
y2019/y2019d03/src/: puzzle.rs
y2019/y2019d04/: Cargo.toml
y2019/y2019d04/benchmarks/: benchmarks.rs
y2019/y2019d04/src/: puzzle.rs
y2019/y2019d05/: Cargo.toml
y2019/y2019d05/benchmarks/: benchmarks.rs
y2019/y2019d05/src/: puzzle.rs
y2019/y2019d06/: Cargo.toml
y2019/y2019d06/benchmarks/: benchmarks.rs
y2019/y2019d06/src/: puzzle.rs
y2019/y2019d07/: Cargo.toml
y2019/y2019d07/benchmarks/: benchmarks.rs
y2019/y2019d07/src/: puzzle.rs
y2019/y2019d08/: Cargo.toml
y2019/y2019d08/benchmarks/: benchmarks.rs
y2019/y2019d08/src/: puzzle.rs
y2019/y2019d09/: Cargo.toml
y2019/y2019d10/: Cargo.toml
y2019/y2019d11/: Cargo.toml
y2019/y2019d12/: Cargo.toml
y2019/y2019d13/: Cargo.toml
y2019/y2019d14/: Cargo.toml
y2019/y2019d15/: Cargo.toml
y2019/y2019d16/: Cargo.toml
y2019/y2019d17/: Cargo.toml
y2019/y2019d18/: Cargo.toml
y2019/y2019d19/: Cargo.toml
y2019/y2019d19/benchmarks/: benchmarks.rs
y2019/y2019d19/src/: puzzle.rs
y2019/y2019d20/: Cargo.toml
y2023/day-02/: Cargo.toml
y2023/day-03/: Cargo.toml
y2023/day-04/: Cargo.toml
y2023/day-05/: Cargo.toml
y2023/day-06/: Cargo.toml
y2023/day-06/src/: puzzle.rs
y2023/day-07/: Cargo.toml
y2023/day-08/: Cargo.toml
y2023/day-09/: Cargo.toml
y2023/day-1/: Cargo.toml
y2023/day-10/: Cargo.toml
y2024/y2024d01/: Cargo.toml
y2024/y2024d02/: Cargo.toml
y2024/y2024d03/: Cargo.toml
y2024/y2024d04/: Cargo.toml
y2024/y2024d05/: Cargo.toml
y2024/y2024d06/: Cargo.toml
y2024/y2024d07/: Cargo.toml
y2024/y2024d08/: Cargo.toml
y2024/y2024d09/: Cargo.toml
y2024/y2024d09/benches/: benchmarks.rs
y2024/y2024d09/src/: puzzle.rs
y2024/y2024d10/: Cargo.toml
y2024/y2024d11/: Cargo.toml
y2024/y2024d12/: Cargo.toml
y2024/y2024d13/: Cargo.toml
y2024/y2024d13/benches/: benchmarks.rs
y2024/y2024d13/src/: puzzle.rs
y2024/y2024d14/: Cargo.toml
y2024/y2024d14/benches/: benchmarks.rs
y2024/y2024d14/src/: puzzle.rs
y2024/y2024d15/: Cargo.toml
y2024/y2024d16/: Cargo.toml
y2024/y2024d17/: Cargo.toml
y2024/y2024d18/: Cargo.toml
y2024/y2024d19/: Cargo.toml
y2024/y2024d20/: Cargo.toml
y2024/y2024d21/: Cargo.toml
y2024/y2024d22/: Cargo.toml
y2024/y2024d23/: Cargo.toml
y2024/y2024d24/: Cargo.toml
y2024/y2024d25/: Cargo.toml
y2025/y2025d01/: Cargo.toml
y2025/y2025d02/: Cargo.toml
y2025/y2025d02/benches/: benchmarks.rs
y2025/y2025d02/src/: puzzle.rs
y2025/y2025d03/: Cargo.toml
y2025/y2025d04/: Cargo.toml
y2025/y2025d05/: Cargo.toml
y2025/y2025d06/: Cargo.toml
y2025/y2025d07/: Cargo.toml
y2025/y2025d08/: Cargo.toml
y2025/y2025d09/: Cargo.toml
(+98 files in other folders)
