[workspace]
resolver = "2"

members = ["y2023/day-*", "common", "y2019/y2019d*", "y2024/y2024d*"]

[workspace.dependencies]
itertools = "0.13.0"
rayon = "1.10.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
divan = "0.1.16"
tracing-tracy = "0.11.3"
tracy-client = "0.17.4"
tracy-client-sys = "0.24.2"
dhat = "0.3.3"


[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = 1