[package]
name = "day-06"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dhat = { workspace = true }
common = { path = "../../common" }

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "day-06"
path = "benchmarks/benchmarks.rs"
harness = false

[features]
dhat-heap = []