[package]
name = "y2024d09"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dhat = { workspace = true }
common = { path = "../../common" }

[dev-dependencies]
divan = { workspace = true }


[[bench]]
name = "y2024d09"
path = "benches/benchmarks.rs"
harness = false

[features]
dhat-heap = []