[package]
name = "y2025d02"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dhat = { workspace = true }
common = { path = "../../common" }

[dev-dependencies]
divan = { workspace = true }


[[bench]]
name = "y2025d02"
path = "benches/benchmarks.rs"
harness = false

[features]
dhat-heap = []